used invisible divs to fix table movement on delete

--- a/src/css/Table.css
+++ b/src/css/Table.css
@@ -50,6 +50,13 @@
     border-color: solid black;
 }
 
+.tableInvisible {
+  margin: 10px;
+  width: 373px;
+  height: 300px;
+  /*border: 3px solid orange;*/
+}
+
 .form-group {
     margin: auto 0;
     text-align: center;
